# qml_lessons

./: .gitignore  README.md
bill_of_lessons/lesson_1/: CMakeLists.txt  README.md  main.qml
lesson_1/: CMakeLists.txt  README.md  compile_commands.json  ex-main.qml  main.cpp
